# dummy-speaker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml  requirements.txt  setup  setup-repository  setup-repository.sh
.cspell/: custom-words.txt
.github/workflows/: pre-commit.yml
scripts/: separate.py  speech-to-text.py
