# [tool.mypy]
# python_version = "3.12"

[tool.poetry]
name = "dummy-speaker"
version = "0.1.0"
description = ""
authors = ["developer <tqer39@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.4"
torch = "2.0.0"  # 互換性のあるバージョンを指定
openai-whisper = {git = "https://github.com/openai/whisper.git"}
